# glpi-reports

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  justfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci-cd.yaml
deployments/: docker-compose.dev.yaml  docker-compose.test.yaml
scripts/src/: run_app.rs  run_tests.rs  stop_app.rs
src/reports/: __main__.py  cli_app.py  config.py  http_app.py  worker_app.py
src/reports/adapters/: events.py  report_factory.py  report_proxy.py  utc_time_provider.py  uuid7_id_generator.py  worker.py
src/reports/adapters/outbox/: outbox_gateway.py  outbox_message.py  outbox_processor.py  outbox_publisher.py  outbox_serialization.py  outbox_storing_handler.py  outbox_workflow.py
src/reports/adapters/persistence/: sql_data_mapper.py  sql_data_mappers_registry.py  sql_mappings.py  sql_tables.py  sql_unit_of_work.py
src/reports/bus/: build_pipelines_chain.py  dispatcher.py  registry.py  resolver.py
src/reports/domain/: types.py
src/reports/ioc/: ioc_api_providers.py  ioc_cli_providers.py  ioc_containers.py  ioc_worker_providers.py
src/reports/presentation/: bus_requests_sender.py
stubs/pika/: __init__.pyi  amqp_object.pyi  callback.pyi  channel.pyi  connection.pyi  credentials.pyi  exceptions.pyi  frame.pyi  spec.pyi
stubs/pika/adapters/: asyncio_connection.pyi  base_connection.pyi  blocking_connection.pyi  select_connection.pyi
tests/: config.py  conftest.py  test_add_device_report.py  test_change_device_report.py  test_delete_device_report.py
(+60 files in other folders)
