[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "glpi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "click>=8.1.8",
    "dishka>=1.5.3",
    "fastapi>=0.115.12",
    "hatchet-sdk>=1.6.3",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pika>=1.3.2",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "uuid7>=0.1.0",
    "uvicorn>=0.34.2",
]


[project.scripts]
reports = "reports.cli_app:main"
